[Neighborhood] Prevent buttons from touching edge of page on smaller screens

--- a/src/sass/_all.scss
+++ b/src/sass/_all.scss
@@ -1154,7 +1154,7 @@ body {
                         top: calc(#{$header-height});
                         position: absolute;
                         left: $side-margin;
-                        
+                        padding-bottom: $content-padding;
                         .left {
                             > img {
                                 width: 100%;
